# Trt_Hrnet

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
onnx2trt/: main.cpp
pytorch2onnx/: _init_paths.py  hrnet2onnx.py  hrnet_infer.py
trtinference/: logger.h  main.cpp  trt_engine.cpp  trt_engine.h  trt_naive_buf.h
